# languagetag

./: .gitignore  CHANGELOG.md  README.md  bcp47-full.cabal  cabal.project  languagetags.cabal
.github/workflows/: haskell-ci.yml  registry-monitor.yml
bench/: Bench.hs  Main.hs
languagetag-bcp47/: .hlint.yaml  CHANGELOG.md  README.md  languagetag-bcp47.cabal
languagetag-bcp47-dynamic/: CHANGELOG.md  README.md  languagetag-bcp47-dynamic.cabal
languagetag-bcp47-dynamic/src/LanguageTag/BCP47/: Dynamic.hs
languagetag-bcp47-dynamic/src/LanguageTag/BCP47/Dynamic/: RecordJar.hs  Registry.hs
languagetag-bcp47-subtag/: CHANGELOG.md  README.md  languagetag-bcp47-subtag.cabal
languagetag-bcp47-subtag/src/LanguageTag/BCP47/: Subtag.hs
languagetag-bcp47-subtag/src/LanguageTag/BCP47/Subtag/: Trie.hs
languagetag-bcp47-subtag/src/LanguageTag/Internal/BCP47/: Subtag.hs
languagetag-bcp47-subtag/src/LanguageTag/Internal/BCP47/Subtag/: NonEmptyTrie.hs  Trie.hs
languagetag-bcp47-syntax/: CHANGELOG.md  README.md  languagetag-bcp47-syntax.cabal
languagetag-bcp47-syntax/src/LanguageTag/BCP47/: LegacyTag.hs  Syntax.hs
languagetag-bcp47-syntax/src/LanguageTag/BCP47/Syntax/: Language.hs  Region.hs  Script.hs  SingletonSection.hs  Trie.hs  Variant.hs
languagetag-bcp47-syntax/src/LanguageTag/Internal/BCP47/: Syntax.hs
languagetag-bcp47-syntax/src/LanguageTag/Internal/BCP47/LegacyTag/: Grandfathered.hs  Redundant.hs
languagetag-bcp47-syntax/src/LanguageTag/Internal/BCP47/Syntax/: Language.hs  Region.hs  Script.hs  SingletonSection.hs  Variant.hs
languagetag-bcp47/src/LanguageTag/BCP47/: Canonicalization.hs  Quasi.hs  Registry.hs  Syntax.hs  Validation.hs
languagetag-bcp47/src/LanguageTag/BCP47/Registry/: Extlang.hs  Grandfathered.hs  Language.hs  Redundant.hs  Region.hs  Script.hs  Variant.hs
languagetag-bcp47/src/LanguageTag/BCP47/Subtag/: NonEmptyTrie.hs
languagetag-bcp47/src/LanguageTag/BCP47/Syntax/: Trie.hs
languagetag-bcp47/src/LanguageTag/Internal/BCP47/: Subtag.hs  Syntax.hs
languagetag-bcp47/src/LanguageTag/Internal/BCP47/Registry/: DataConShow.hs  Date.hs  Extlang.hs  ExtlangRecords.hs  Grandfathered.hs  GrandfatheredRecords.hs  Language.hs  LanguageRecords.hs  Orphans.hs  Redundant.hs  RedundantRecords.hs  Region.hs  RegionRecords.hs  Script.hs  ScriptRecords.hs  Types.hs  Variant.hs  VariantRecords.hs
languagetag-bcp47/src/Text/LanguageTag/BCP47/: Canonicalization.hs  Quasi.hs  Registry.hs  Subtag.hs  Syntax.hs
languagetag-bcp47/src/Text/LanguageTag/BCP47/Registry/: Extlang.hs  Grandfathered.hs  Language.hs  Redundant.hs  Variant.hs
languagetag-bcp47/src/Text/LanguageTag/BCP47/Subtag/: NonEmptyTrie.hs  Trie.hs
languagetag-bcp47/src/Text/LanguageTag/BCP47/Syntax/: Trie.hs
languagetag-bcp47/src/Text/LanguageTag/Internal/BCP47/: Subtag.hs  Syntax.hs
languagetag-bcp47/src/Text/LanguageTag/Internal/BCP47/Registry/: DataConShow.hs  Date.hs  Extlang.hs  ExtlangRecords.hs  Grandfathered.hs  GrandfatheredRecords.hs  Language.hs  LanguageRecords.hs  Redundant.hs  RedundantRecords.hs  Region.hs  RegionRecords.hs  Script.hs  ScriptRecords.hs  Types.hs  Variant.hs  VariantRecords.hs
languagetag-bcp47/src/Text/LanguageTag/Internal/BCP47/Subtag/: NonEmptyTrie.hs  Trie.hs
languagetag-bcp47/test/: Spec.hs
languagetag-bcp47/test/LanguageTag/BCP47/: CanonicalizationSpec.hs  QuasiSpec.hs  RegistrySpec.hs  SubtagSpec.hs  SyntaxSpec.hs  TrieSpec.hs
languagetag-bcp47/test/LanguageTag/BCP47/Registry/: ExtlangSpec.hs  GrandfatheredSpec.hs  LanguageSpec.hs  RedundantSpec.hs  RegionSpec.hs  ScriptSpec.hs  VariantSpec.hs
languagetag-bcp47/test/Test/: Common.hs
languagetag-bcp47/test/Text/LanguageTag/BCP47/: CanonicalizationSpec.hs  QuasiSpec.hs  RegistrySpec.hs  SubtagSpec.hs  SyntaxSpec.hs  TrieSpec.hs
languagetag-bcp47/test/Text/LanguageTag/BCP47/Registry/: LanguageSpec.hs  RedundantSpec.hs  RegionSpec.hs  VariantSpec.hs
languagetag-gen/: README.md  languagetag-gen.cabal
languagetag-gen/app/: Main.hs
languagetag-gen/src/LanguageTag/: Gen.hs
languagetag-gen/src/Text/LanguageTag/: Gen.hs
languagetag-gen/test/: Spec.hs
languagetags/: README.md  languagetags.cabal
languagetags-gen/: LICENSE  README.md  languagetags-gen.cabal
languagetags-gen/src/: Gen.hs
languagetags-gen/src/Text/LanguageTag/: Gen.hs
languagetags-gen/test/: Spec.hs
languagetags/src/Text/LanguageTag/: Subtag.hs
languagetags/src/Text/LanguageTag/BCP47/: Canonicalization.hs  Quasi.hs  Registry.hs  Subtag.hs  Syntax.hs  Validation.hs
languagetags/src/Text/LanguageTag/BCP47/Registry/: Extlang.hs  Grandfathered.hs  Language.hs  Redundant.hs  Region.hs  Script.hs  Variant.hs
languagetags/src/Text/LanguageTag/BCP47/Subtag/: NonEmptyTrie.hs  Trie.hs
languagetags/src/Text/LanguageTag/BCP47/Syntax/: Trie.hs
languagetags/src/Text/LanguageTag/Internal/: Subtag.hs
languagetags/src/Text/LanguageTag/Internal/BCP47/: Canonicalization.hs  Registry.hs  Subtag.hs  Syntax.hs
languagetags/src/Text/LanguageTag/Internal/BCP47/Registry/: DataConShow.hs  Extlang.hs  ExtlangRecords.hs  GrandfatheredRecords.hs  Language.hs  LanguageRecords.hs  Orphans.hs  Redundant.hs  RedundantRecords.hs  Region.hs  RegionRecords.hs  Script.hs  ScriptRecords.hs  Types.hs  Variant.hs  VariantRecords.hs
languagetags/src/Text/LanguageTag/Internal/BCP47/Subtag/: NonEmptyTrie.hs  Trie.hs
languagetags/src/Text/LanguageTag/Internal/Subtag/: Trie.hs
languagetags/src/Text/LanguageTag/Subtag/: Trie.hs
languagetags/test/: Spec.hs
languagetags/test/Test/: Common.hs
languagetags/test/Text/LanguageTag/BCP47/: CanonicalizationSpec.hs  QuasiSpec.hs  RegistrySpec.hs  SubtagSpec.hs  SyntaxSpec.hs  TrieSpec.hs
languagetags/test/Text/LanguageTag/BCP47/Registry/: ExtlangSpec.hs  GrandfatheredSpec.hs  LanguageSpec.hs  RedundantSpec.hs  RegionSpec.hs  ScriptSpec.hs  VariantSpec.hs
src/Text/: BCP47.hs
src/Text/BCP47/: Syntax.hs  SyntaxAlt.hs
src/Text/BCP47/Internal/: Syntax.hs  SyntaxAlt.hs
src/Text/LanguageTag/: Subtag.hs
src/Text/LanguageTag/BCP47/: Grandfathered.hs  Syntax.hs  (+3 more)
test/: Spec.hs
(+65 files in other folders)
