cabal-version: 2.4
name:          languagetags
version:       0.1.0
synopsis:      Language tag parsing and analysis
bug-reports:   https://github.com/despresc/languagetags/issues 
license:       BSD-2-Clause
license-file:  LICENSE
author:        Christian Despres
maintainer:    christian.j.j.despres@gmail.com
copyright:     Copyright 2021 Christian Despres
category:      Text
description:
  This library aims to provide tools for parsing and analyzing a
  variety of different language tags, /language tag/ meaning some code
  in a standard for identifying human languages. Currently it only
  supports checking the syntactic well-formedness and semantic
  validity of [BCP47 language tags](https://tools.ietf.org/html/bcp47)
  as of its current 2009 version, as well as canonicalizing such
  tags. The pertinent functions are generated automatically using data
  from the IANA Language Subtag Registry, available from
  <https://www.iana.org/assignments/language-subtag-registry/language-subtag-registry>. This
  library uses the version of 2021-02-23.

extra-source-files:
  CHANGELOG.md
  README.md

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
    base >=4.12.0.0,
    text >=1.2,
    containers >=0.5,
    bytestring,
    hashable,
    unordered-containers,
    deepseq,
    time,
    vector
  ghc-options: -Wall
  exposed-modules:
    Text.LanguageTag.BCP47.Registry.Extlang
    Text.LanguageTag.BCP47.Registry.Grandfathered
    Text.LanguageTag.BCP47.Registry.Language
    Text.LanguageTag.BCP47.Registry.Redundant
    Text.LanguageTag.BCP47.Registry.Region
    Text.LanguageTag.BCP47.Registry.RegistryDate
    Text.LanguageTag.BCP47.Registry.Script
    Text.LanguageTag.BCP47.Registry.Variant
    Text.LanguageTag.BCP47.Syntax
    Text.LanguageTag.BCP47.Validate
    Text.LanguageTag.Internal.BCP47.Syntax
    Text.LanguageTag.Internal.Subtag
    Text.LanguageTag.Subtag
  other-modules:
    Text.LanguageTag.Internal.BCP47.ExtlangRecords
    Text.LanguageTag.Internal.BCP47.GrandfatheredRecords
    Text.LanguageTag.Internal.BCP47.LanguageRecords
    Text.LanguageTag.Internal.BCP47.RedundantRecords
    Text.LanguageTag.Internal.BCP47.RegionRecords
    Text.LanguageTag.Internal.BCP47.ScriptRecords
    Text.LanguageTag.Internal.BCP47.Validate
    Text.LanguageTag.Internal.BCP47.VariantRecords

test-suite test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: Spec.hs
  hs-source-dirs:
    test
  build-depends: languagetags, base, text, containers, deepseq, hspec

benchmark bench
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: Bench.hs
  hs-source-dirs:
    bench
  build-depends: languagetags, tasty-bench, base, deepseq

executable languagetags-gen
  hs-source-dirs: gen
  default-language: Haskell2010
  main-is: Gen.hs
  build-depends:
    base >=4.12.0.0,
    text >=1.2,
    containers >=0.5,
    bytestring,
    hashable,
    unordered-containers,
    process,
    languagetags,
    time
  ghc-options: -Wall
