cabal-version: 2.4
name:          languagetags
version:       0.1.0
synopsis:      Language tag parsing and analysis
bug-reports:   https://github.com/despresc/languagetags/issues 
license:       BSD-2-Clause
license-file:  LICENSE
author:        Christian Despres
maintainer:    christian.j.j.despres@gmail.com
copyright:     Copyright 2021 Christian Despres
category:      Text
description:
  This library aims to provide tools for parsing and analyzing a
  variety of different language tags, /language tag/ meaning some code
  in a standard for identifying human languages. Currently it only
  supports checking the syntactic well-formedness and semantic
  validity of [BCP47 language tags](https://tools.ietf.org/html/bcp47)
  as of its current 2009 version, as well as canonicalizing such
  tags. The validating functions are statically generated using data
  from the IANA Language Subtag Registry, available from
  <https://www.iana.org/assignments/language-subtag-registry/language-subtag-registry>. See
  the Validate submodule for the exact registry version this library uses.

extra-source-files:
  CHANGELOG.md
  README.md

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
    base >=4.12.0.0,
    text >=1.2,
    containers >=0.6.3.1,
    bytestring,
    hashable,
    unordered-containers,
    deepseq,
    time,
    vector
  ghc-options: -Wall
  exposed-modules:
    Text.LanguageTag.BCP47.Syntax
    Text.LanguageTag.BCP47.Validate
    Text.LanguageTag.BCP47.Validate.Extlang
    Text.LanguageTag.BCP47.Validate.Grandfathered
    Text.LanguageTag.BCP47.Validate.Language
    Text.LanguageTag.BCP47.Validate.Redundant
    Text.LanguageTag.BCP47.Validate.Region
    Text.LanguageTag.BCP47.Validate.Script
    Text.LanguageTag.BCP47.Validate.Variant
    Text.LanguageTag.Internal.BCP47.Syntax
    Text.LanguageTag.Internal.BCP47.Validate.DataConShow
    Text.LanguageTag.Internal.BCP47.Validate.Types
    Text.LanguageTag.Internal.Subtag
    Text.LanguageTag.Subtag

  other-modules:
    Text.LanguageTag.Internal.BCP47.Validate.Extlang
    Text.LanguageTag.Internal.BCP47.Validate.ExtlangRecords
    Text.LanguageTag.Internal.BCP47.Validate.Grandfathered
    Text.LanguageTag.Internal.BCP47.Validate.GrandfatheredRecords
    Text.LanguageTag.Internal.BCP47.Validate.Language
    Text.LanguageTag.Internal.BCP47.Validate.LanguageRecords
    Text.LanguageTag.Internal.BCP47.Validate.Orphans
    Text.LanguageTag.Internal.BCP47.Validate.Redundant
    Text.LanguageTag.Internal.BCP47.Validate.RedundantRecords
    Text.LanguageTag.Internal.BCP47.Validate.Region
    Text.LanguageTag.Internal.BCP47.Validate.RegionRecords
    Text.LanguageTag.Internal.BCP47.Validate.RegistryDate
    Text.LanguageTag.Internal.BCP47.Validate.Script
    Text.LanguageTag.Internal.BCP47.Validate.ScriptRecords
    Text.LanguageTag.Internal.BCP47.Validate.Variant
    Text.LanguageTag.Internal.BCP47.Validate.VariantRecords

test-suite test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: Spec.hs
  hs-source-dirs:
    test
  build-depends: languagetags, base, text, containers, deepseq, hspec

benchmark bench
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: Bench.hs
  hs-source-dirs:
    bench
  build-depends: languagetags, tasty-bench, base, deepseq

executable languagetags-gen
  hs-source-dirs: gen
  default-language: Haskell2010
  main-is: Gen.hs
  build-depends:
    base >=4.12.0.0,
    text >=1.2,
    containers >=0.5,
    bytestring,
    hashable,
    unordered-containers,
    process,
    languagetags,
    time
  ghc-options: -Wall
