cabal-version: 2.4
name:          languagetag-bcp47-subtag
version:       0.1.0
synopsis:      BCP47 subtag parsing
bug-reports:   https://github.com/despresc/languagetag/issues
license:       BSD-2-Clause
license-file:  LICENSE
author:        Christian Despres
maintainer:    christian.j.j.despres@gmail.com
copyright:     Copyright 2021 Christian Despres
category:      Text
description:
  This library provides tools for parsing BCP47 subtags, strings of ASCII
  letters and digits between one and eight characters long.
tested-with:
  GHC ==8.6.5 || ==8.8.4 || ==8.10.4 || ==9.0.2 || ==9.2.7 || ==9.4.4

extra-source-files:
  CHANGELOG.md
  README.md

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
    base >= 4.12 && < 4.18,
    text >= 1.2.3.0 && < 2.1,
    containers >= 0.6.0.1 && < 0.7,
    bytestring >= 0.10.8.0 && < 0.12,
    hashable >= 1.2.7.0 && < 1.5,
    deepseq >= 1.4.4.0 && < 1.5,
    vector >= 0.12.0.1 && < 0.14,
  ghc-options: -Wall
  exposed-modules:
    LanguageTag.BCP47.Subtag
    LanguageTag.BCP47.Subtag.NonEmptyTrie
    LanguageTag.BCP47.Subtag.Trie
    LanguageTag.Internal.BCP47.Subtag
    LanguageTag.Internal.BCP47.Subtag.NonEmptyTrie
    LanguageTag.Internal.BCP47.Subtag.Trie
