cabal-version: 2.4
name:          languagetag-bcp47
version:       0.1.0
synopsis:      BCP47 language tag parsing and analysis
bug-reports:   https://github.com/despresc/languagetag/issues
license:       BSD-2-Clause
license-file:  LICENSE
author:        Christian Despres
maintainer:    christian.j.j.despres@gmail.com
copyright:     Copyright 2021 Christian Despres
category:      Text
description:
  This library provides tools for parsing and analyzing [BCP47 language
  tags](https://tools.ietf.org/html/bcp47) and their components, as of the
  current 2009 version of that standard. The registered tag and subtag types and
  other relevant registry functions are statically generated using data from the
  IANA Language Subtag Registry, available from
  <https://www.iana.org/assignments/language-subtag-registry/language-subtag-registry>.
  See the Registry submodule or the source file @data\/registry@ for the exact
  registry version this library uses.
tested-with:
  GHC ==8.6.5 || ==8.8.4 || ==8.10.4 || ==9.0.1

extra-source-files:
  CHANGELOG.md
  README.md
  data/registry

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
    base >= 4.12 && < 4.18,
    bytestring >= 0.10.8.0 && < 0.12,
    containers >= 0.6.0.1 && < 0.7,
    deepseq >= 1.4.4.0 && < 1.5,
    hashable >= 1.2.7.0 && < 1.4,
    template-haskell >= 2.14.0.0 && < 2.19,
    text >= 1.2.3.0 && < 1.3,
    time >= 1.6 && < 1.12,
    vector >= 0.12.0.1 && < 0.13,
    languagetag-bcp47-subtag >= 0.1 && < 0.2,
    languagetag-bcp47-syntax >= 0.1 && < 0.2
  ghc-options: -Wall
  exposed-modules:
    LanguageTag.BCP47.Canonicalization
    LanguageTag.BCP47.Quasi
    LanguageTag.BCP47.Registry
    LanguageTag.BCP47.Registry.Extlang
    LanguageTag.BCP47.Registry.Grandfathered
    LanguageTag.BCP47.Registry.Language
    LanguageTag.BCP47.Registry.Redundant
    LanguageTag.BCP47.Registry.Region
    LanguageTag.BCP47.Registry.Script
    LanguageTag.BCP47.Registry.Variant
    LanguageTag.BCP47.Validation
    LanguageTag.Internal.BCP47.Registry.DataConShow
    LanguageTag.Internal.BCP47.Registry.ExtlangRecords
    LanguageTag.Internal.BCP47.Registry.GrandfatheredRecords
    LanguageTag.Internal.BCP47.Registry.LanguageRecords
    LanguageTag.Internal.BCP47.Registry.RedundantRecords
    LanguageTag.Internal.BCP47.Registry.RegionRecords
    LanguageTag.Internal.BCP47.Registry.ScriptRecords
    LanguageTag.Internal.BCP47.Registry.Types
    LanguageTag.Internal.BCP47.Registry.VariantRecords
  other-modules:
    LanguageTag.Internal.BCP47.Registry.Date
    LanguageTag.Internal.BCP47.Registry.Extlang
    LanguageTag.Internal.BCP47.Registry.Language
    LanguageTag.Internal.BCP47.Registry.Orphans
    LanguageTag.Internal.BCP47.Registry.Region
    LanguageTag.Internal.BCP47.Registry.Script
    LanguageTag.Internal.BCP47.Registry.Variant

test-suite test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: Spec.hs
  hs-source-dirs:
    test
  build-depends:
    QuickCheck,
    base,
    containers,
    deepseq,
    file-embed,
    hspec,
    languagetag-bcp47,
    languagetag-bcp47-subtag,
    languagetag-bcp47-syntax,
    text,
    unordered-containers,
    vector,
  ghc-options: -Wall
  other-modules:
    Test.Common
    LanguageTag.BCP47.CanonicalizationSpec
    LanguageTag.BCP47.QuasiSpec
    LanguageTag.BCP47.Registry.ExtlangSpec
    LanguageTag.BCP47.Registry.GrandfatheredSpec
    LanguageTag.BCP47.Registry.LanguageSpec
    LanguageTag.BCP47.Registry.RedundantSpec
    LanguageTag.BCP47.Registry.RegionSpec
    LanguageTag.BCP47.Registry.ScriptSpec
    LanguageTag.BCP47.Registry.VariantSpec
    LanguageTag.BCP47.RegistrySpec
    LanguageTag.BCP47.SubtagSpec
    LanguageTag.BCP47.SyntaxSpec
    LanguageTag.BCP47.TrieSpec
