cabal-version: 2.4
name:          languagetag-gen
version:       0.1.0
synopsis:      Code generation for languagetag
bug-reports:   https://github.com/despresc/languagetag/issues
license:       BSD-2-Clause
license-file:  LICENSE
author:        Christian Despres
maintainer:    christian.j.j.despres@gmail.com
copyright:     Copyright 2021 Christian Despres
category:      Text
description:
  This package is responsible for generating internal modules in the
  languagetag project using the registry information in the
  @registry\/@ directory. At the moment we only process the IANA
  language subtag registry, an up-to-date copy of which is available
  at
  <https://www.iana.org/assignments/language-subtag-registry/language-subtag-registry>.

extra-source-files:
  README.md

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    languagetag-bcp47 == 0.1.0,
    base,
    text,
    containers,
    bytestring,
    hashable,
    unordered-containers,
    process,
    time,
    directory >= 1.3.3.0 && < 1.4,
  exposed-modules:
    Text.LanguageTag.Gen
    Text.LanguageTag.Gen.BCP47.Common
    Text.LanguageTag.Gen.BCP47.Parse
    Text.LanguageTag.Gen.BCP47.Render
    Text.LanguageTag.Gen.Jar

executable languagetag-gen
  hs-source-dirs: app
  default-language: Haskell2010
  main-is: Main.hs
  build-depends:
    base,
    languagetag-gen
  ghc-options: -Wall


test-suite test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: Spec.hs
  hs-source-dirs:
    test
  build-depends:
    languagetag-bcp47,
    languagetag-gen,
    base,
    text,
    hspec,
  ghc-options: -Wall
  other-modules:
    Text.LanguageTag.Gen.BCP47.ParseSpec