cabal-version: 2.4
name:          languagetags-gen
version:       0.1.0
synopsis:      Code generation for languagetags
bug-reports:   https://github.com/despresc/languagetags/issues
license:       BSD-2-Clause
license-file:  LICENSE
author:        Christian Despres
maintainer:    christian.j.j.despres@gmail.com
copyright:     Copyright 2021 Christian Despres
category:      Text
description:
  This package is responsible for generating internal modules in the
  languagetags library using the registry information in the
  @registry\/@ directory. At the moment we only process the IANA
  language subtag registry, an up-to-date copy of which is available
  at
  <https://www.iana.org/assignments/language-subtag-registry/language-subtag-registry>.

extra-source-files:
  README.md

executable languagetags-gen
  hs-source-dirs: src
  default-language: Haskell2010
  main-is: Gen.hs
  build-depends:
    languagetags == 0.1.0,
    base,
    text,
    containers,
    bytestring,
    hashable,
    unordered-containers,
    process,
    time,
    directory >= 1.3.3.0 && < 1.4,
  ghc-options: -Wall
