cabal-version: 2.4
name:          languagetags
version:       0.1.0
synopsis:      Language tag parsing and analysis
bug-reports:   https://github.com/despresc/languagetags/issues 
license:       BSD-2-Clause
license-file:  LICENSE
author:        Christian Despres
maintainer:    christian.j.j.despres@gmail.com
copyright:     Copyright 2021 Christian Despres
category:      Text
description:
  This library aims to provide tools for parsing and analyzing a
  variety of different language tags, /language tag/ meaning some code
  in a standard for identifying human languages. Currently it only
  supports the processing of [BCP47 language
  tags](https://tools.ietf.org/html/bcp47) as of the current 2009
  version of that standard. The registered tag and subtag types and
  other relevant registry functions are statically generated using
  data from the IANA Language Subtag Registry, available from
  <https://www.iana.org/assignments/language-subtag-registry/language-subtag-registry>. See
  the Registry submodule for the exact registry version this library
  uses.
tested-with:
  GHC ==8.6.5 || ==8.8.4 || ==8.10.4 || ==9.0.1

extra-source-files:
  CHANGELOG.md
  README.md

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
    base >= 4.12 && < 4.16,
    text >= 1.2.3.0 && < 1.3,
    containers >= 0.6.0.1 && < 0.7,
    bytestring >= 0.10.8.0 && < 0.11,
    hashable >= 1.2.7.0 && < 1.4,
    unordered-containers >= 0.2.9.0 && < 0.3,
    deepseq >= 1.4.4.0 && < 1.5,
    time >= 1.6 && < 1.12,
    vector >= 0.12.0.1 && < 0.13,
    template-haskell >= 2.14.0.0 && < 2.18
  ghc-options: -Wall
  exposed-modules:
    Text.LanguageTag.BCP47.Canonicalization
    Text.LanguageTag.BCP47.Quasi
    Text.LanguageTag.BCP47.Registry
    Text.LanguageTag.BCP47.Registry.Extlang
    Text.LanguageTag.BCP47.Registry.Grandfathered
    Text.LanguageTag.BCP47.Registry.Language
    Text.LanguageTag.BCP47.Registry.Redundant
    Text.LanguageTag.BCP47.Registry.Region
    Text.LanguageTag.BCP47.Registry.Script
    Text.LanguageTag.BCP47.Registry.Variant
    Text.LanguageTag.BCP47.Subtag
    Text.LanguageTag.BCP47.Subtag.NonEmptyTrie
    Text.LanguageTag.BCP47.Subtag.Trie
    Text.LanguageTag.BCP47.Syntax
    Text.LanguageTag.BCP47.Syntax.Trie
    Text.LanguageTag.BCP47.Validation
    Text.LanguageTag.Internal.BCP47.Registry.DataConShow
    Text.LanguageTag.Internal.BCP47.Registry.ExtlangRecords
    Text.LanguageTag.Internal.BCP47.Registry.GrandfatheredRecords
    Text.LanguageTag.Internal.BCP47.Registry.LanguageRecords
    Text.LanguageTag.Internal.BCP47.Registry.RedundantRecords
    Text.LanguageTag.Internal.BCP47.Registry.RegionRecords
    Text.LanguageTag.Internal.BCP47.Registry.ScriptRecords
    Text.LanguageTag.Internal.BCP47.Registry.Types
    Text.LanguageTag.Internal.BCP47.Registry.VariantRecords
    Text.LanguageTag.Internal.BCP47.Subtag
    Text.LanguageTag.Internal.BCP47.Subtag.NonEmptyTrie
    Text.LanguageTag.Internal.BCP47.Subtag.Trie
    Text.LanguageTag.Internal.BCP47.Syntax
  other-modules:
    Text.LanguageTag.Internal.BCP47.Registry.Date
    Text.LanguageTag.Internal.BCP47.Registry.Extlang
    Text.LanguageTag.Internal.BCP47.Registry.Grandfathered
    Text.LanguageTag.Internal.BCP47.Registry.Language
    Text.LanguageTag.Internal.BCP47.Registry.Orphans
    Text.LanguageTag.Internal.BCP47.Registry.Redundant
    Text.LanguageTag.Internal.BCP47.Registry.Region
    Text.LanguageTag.Internal.BCP47.Registry.Script
    Text.LanguageTag.Internal.BCP47.Registry.Variant

test-suite test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: Spec.hs
  hs-source-dirs:
    test
  build-depends:
    languagetags,
    base,
    text,
    containers,
    deepseq,
    vector,
    unordered-containers,
    hspec,
    QuickCheck,
  ghc-options: -Wall
  other-modules:
    Test.Common
    Text.LanguageTag.BCP47.CanonicalizationSpec
    Text.LanguageTag.BCP47.QuasiSpec
    Text.LanguageTag.BCP47.Registry.ExtlangSpec
    Text.LanguageTag.BCP47.Registry.GrandfatheredSpec
    Text.LanguageTag.BCP47.Registry.LanguageSpec
    Text.LanguageTag.BCP47.Registry.RedundantSpec
    Text.LanguageTag.BCP47.Registry.RegionSpec
    Text.LanguageTag.BCP47.Registry.ScriptSpec
    Text.LanguageTag.BCP47.Registry.VariantSpec
    Text.LanguageTag.BCP47.RegistrySpec
    Text.LanguageTag.BCP47.SubtagSpec
    Text.LanguageTag.BCP47.SyntaxSpec
    Text.LanguageTag.BCP47.TrieSpec
